# QTerm

./: CMakeLists.txt  README.md
src/: Console.cpp  Console.h  KeyboardEvent.cpp  KeyboardEvent.h  MainWindow.cpp  MainWindow.h  SettingsDialog.cpp  SettingsDialog.h  main.cpp  mainwindow.ui  ui_mainwindow.h
